RC: fix align styles for images

--- a/Reconcept/dev/src/sass/components/_text-box.scss
+++ b/Reconcept/dev/src/sass/components/_text-box.scss
@@ -284,7 +284,7 @@
         max-width: 40%;
       }
       @include media(hover,681){
-        float: left;
+        float: right;
       }
       @include media(screen,680){
         width: 100%;
